--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div class="AllPage">
 <h1>Data;Break;</h1>
 <img src="./Shipe.png"></img>
-<a href="download.html" target="_blank">Download</a>
+<a href="download.html">Download</a>
 </div>
 </body>
 </html>
