--- a/download.html
+++ b/download.html
@@ -11,6 +11,7 @@
 <div class="AllPage">
 <h1>Coming Soon</h1>
 <a href="javascript:history.back()">Back</a>
+<img src="./NoBackInerte.png" class="lowGo"></img>
 </div>
 </body>
 </html>
