Added Beta Download Link

--- a/download.html
+++ b/download.html
@@ -9,8 +9,9 @@
 </head>
 <body>
 <div class="AllPage">
-<h1>Coming Soon</h1>
-<a href="javascript:history.back()">Back</a>
+<!--<h1>Coming Soon</h1>-->
+<a href="Files/Data;Break;Game;.7z"><h1>Beta;Release;</h1></a>
+<a href="javascript:history.back()">Back;</a>
 <img src="./NoBackInerte.png" class="lowGo"></img>
 </div>
 </body>
