--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div class="AllPage">
 <h1>Data;Break;</h1>
 <img src="./Shipe.png"></img>
-<a href="download.html">Download</a>
+<a href="download.html">Download;</a>
 <img src="./NoBackInerte.png" class="lowGo"></img>
 </div>
 </body>
