changed some file names

--- a/download.html
+++ b/download.html
@@ -10,7 +10,7 @@
 <body>
 <div class="AllPage">
 <!--<h1>Coming Soon</h1>-->
-<a href="Files/Data;Break;Game;Beta;.7z" download><p class="RelButon">Beta;Release;Windows;</p></a>
+<a href="Files/Data;Break;Game;Beta;Windows;.7z" download><p class="RelButon">Beta;Release;Windows;</p></a>
 <a href="javascript:history.back()">Back;</a>
 <img src="./NoBackInerte.png" class="lowGo">
 </div>
