--- a/download.html
+++ b/download.html
@@ -11,6 +11,8 @@
 <div class="AllPage">
 <!--<h1>Coming Soon</h1>-->
 <a href="Files/Data;Break;Game;Beta;Windows;.7z" download><p class="RelButon">Beta;Release;Windows;</p></a>
+<br></br>
+<a href="Files/Data;Break;Game;Beta;Linux;.7z" download><p class="RelButon">Beta;Release;Linux;.7z</p></a>
 <a href="javascript:history.back()">Back;</a>
 <img src="./NoBackInerte.png" class="lowGo">
 </div>
