--- a/download.html
+++ b/download.html
@@ -10,8 +10,8 @@
 <body>
 <div class="AllPage">
 <!--<h1>Coming Soon</h1>-->
-<a href="Files/Data;Break;Game;Beta;Windows;.7z" download><p class="RelButon">Beta;Release;Windows;</p></a>
-<a href="Files/Data;Break;Game;Beta;Linux;.7z" download><p class="RelButon">Beta;Release;Linux;</p></a>
+<a href="Files/DataBreakGameAlphaWindows.7z" download><p class="RelButon">Alpha;Release;Windows;</p></a>
+<a href="Files/DataBreakGameAlphaLinux.7z" download><p class="RelButon">Alpha;Release;Linux;</p></a>
 <a href="javascript:history.back()">Back;</a>
 <img src="./NoBackInerte.png" class="lowGo">
 </div>
